feat: complete migration to microservices, add authorization utilities, security filters, and clean legacy files