@@ -7,6 +7,20 @@ import jakarta.servlet.annotation.WebServlet;
 import jakarta.servlet.http.HttpServlet;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import jakarta.servlet.http.HttpSession;
+
+import java.nio.charset.StandardCharsets;
+import java.security.MessageDigest;
+
+import javax.crypto.Mac;
+import javax.crypto.spec.SecretKeySpec;
+
+import org.hibernate.Session;
+
+import com.app.zingbitemodels.Orders;
+import com.app.zingbitemodels.Payment;
+import com.app.zingbitemodels.User;
+import com.app.zingbiteutils.DBUtils;
 
 import com.app.zingbiteutils.PaymentService;
 import com.google.gson.JsonObject;
@@ -23,8 +37,6 @@ public class PaymentVerificationServlet extends HttpServlet {
         resp.setContentType("application/json");
         resp.setCharacterEncoding("UTF-8");
 
-        String path = req.getServletPath();
-        
         try {
             StringBuilder bodyBuilder = new StringBuilder();
             try (BufferedReader reader = req.getReader()) {
@@ -34,108 +46,181 @@ public class PaymentVerificationServlet extends HttpServlet {
                 }
             }
             String rawBody = bodyBuilder.toString();
-            if (rawBody.trim().isEmpty()) {
+            if (rawBody.isBlank()) {
                 resp.setStatus(HttpServletResponse.SC_BAD_REQUEST);
                 resp.getWriter().write("{\"success\":false,\"error\":\"Empty request body\"}");
                 return;
             }
 
-            JsonObject reqJson = JsonParser.parseString(rawBody).getAsJsonObject();
-            
-            if (reqJson == null || !reqJson.has("orderId")) {
-                resp.setStatus(HttpServletResponse.SC_BAD_REQUEST);
-                resp.getWriter().write("{\"success\":false,\"error\":\"Missing orderId\"}");
+            if ("/api/payment/webhook".equals(req.getServletPath())) {
+                handleWebhook(req, resp, rawBody);
                 return;
             }
 
+            JsonObject reqJson = JsonParser.parseString(rawBody).getAsJsonObject();
+            if (!reqJson.has("orderId")) {
+                sendError(resp, HttpServletResponse.SC_BAD_REQUEST, "Missing orderId");
+                return;
+            }
             String orderIdStr = reqJson.get("orderId").getAsString().replace("ZB-", "").trim();
             int orderId = Integer.parseInt(orderIdStr);
-
             String transactionId = reqJson.has("transactionId") ? reqJson.get("transactionId").getAsString() : "";
-            String paymentMethod = reqJson.has("paymentMethod") ? reqJson.get("paymentMethod").getAsString() : "Razorpay";
             String razorpayPaymentId = reqJson.has("razorpayPaymentId") ? reqJson.get("razorpayPaymentId").getAsString() : "";
             String razorpayOrderId = reqJson.has("razorpayOrderId") ? reqJson.get("razorpayOrderId").getAsString() : "";
             String razorpaySignature = reqJson.has("razorpaySignature") ? reqJson.get("razorpaySignature").getAsString() : "";
 
-            if ("/api/payment/verify".equals(path)) {
-                System.out.println("[PaymentVerification] Verifying payment for ZB-" + orderId + ", txn: " + transactionId);
-                
-                try {
-                    String gatewayStatus;
-                    // Use signature-based verification when Razorpay provides all three fields
-                    if (!razorpayPaymentId.isEmpty() && !razorpayOrderId.isEmpty() && !razorpaySignature.isEmpty()) {
-                        gatewayStatus = PaymentService.getInstance().verifyRazorpaySignatureAndFetchStatus(razorpayOrderId, razorpayPaymentId, razorpaySignature, orderId);
-                    } else {
-                        gatewayStatus = PaymentService.getInstance().verifyPaymentOnGateway(transactionId, orderId);
-                    }
-                    
-                    if ("COMPLETED".equals(gatewayStatus)) {
-                        boolean captured = PaymentService.getInstance().processOrderCapture(orderId, transactionId, paymentMethod);
-                        if (captured) {
-                            resp.getWriter().write("{\"success\":true,\"status\":\"COMPLETED\"}");
-                        } else {
-                            resp.setStatus(HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
-                            resp.getWriter().write("{\"success\":false,\"error\":\"Failed to capture order in DB\"}");
-                        }
-                    } else {
-                        PaymentService.getInstance().processOrderCancellation(orderId, "Gateway returned failure status during client verify");
-                        resp.getWriter().write("{\"success\":false,\"status\":\"FAILED\",\"error\":\"Payment was declined by card issuer\"}");
-                    }
-                } catch (Exception timeoutEx) {
-                    System.err.println("[PaymentVerification] Gateway connection timeout for ZB-" + orderId + ": " + timeoutEx.getMessage());
-                    resp.setStatus(HttpServletResponse.SC_GATEWAY_TIMEOUT);
-                    resp.getWriter().write("{\"success\":false,\"error\":\"Gateway connection timeout. Payment will be reconciled shortly in the background.\"}");
-                }
+            VerificationContext context = authorizeOrder(req, orderId);
+            if (context == null) {
+                sendError(resp, HttpServletResponse.SC_FORBIDDEN, "You are not authorized to verify this order");
+                return;
+            }
 
-            } else if ("/api/payment/webhook".equals(path)) {
-                String webhookSecret = System.getenv("RAZORPAY_WEBHOOK_SECRET");
-                if (webhookSecret == null || webhookSecret.isEmpty()) {
-                    webhookSecret = System.getProperty("RAZORPAY_WEBHOOK_SECRET");
-                }
-                if (webhookSecret != null && !webhookSecret.isEmpty()) {
-                    String receivedSignature = req.getHeader("X-Razorpay-Signature");
-                    if (receivedSignature == null || receivedSignature.isEmpty()) {
-                        resp.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
-                        resp.getWriter().write("{\"success\":false,\"error\":\"Missing webhook signature\"}");
+            String gatewayStatus;
+            if ("Razorpay".equalsIgnoreCase(context.paymentMethod)) {
+                if (PaymentService.isPaymentTestMode()) {
+                    if (razorpayPaymentId.isBlank()) razorpayPaymentId = "mock_razorpay_payment_id";
+                    if (razorpayOrderId.isBlank()) razorpayOrderId = "mock_razorpay_order_id";
+                    if (razorpaySignature.isBlank()) razorpaySignature = "mock_razorpay_signature";
+                } else {
+                    if (razorpayPaymentId.isBlank() || razorpayOrderId.isBlank() || razorpaySignature.isBlank()) {
+                        sendError(resp, HttpServletResponse.SC_BAD_REQUEST, "Complete Razorpay verification data is required");
                         return;
                     }
-                    try {
-                        String payload = rawBody;
-                        javax.crypto.Mac sha256Hmac = javax.crypto.Mac.getInstance("HmacSHA256");
-                        javax.crypto.spec.SecretKeySpec secretKey = new javax.crypto.spec.SecretKeySpec(webhookSecret.getBytes("UTF-8"), "HmacSHA256");
-                        sha256Hmac.init(secretKey);
-                        byte[] hash = sha256Hmac.doFinal(payload.getBytes("UTF-8"));
-                        StringBuilder hexString = new StringBuilder();
-                        for (byte b : hash) {
-                            String hex = Integer.toHexString(0xff & b);
-                            if (hex.length() == 1) hexString.append('0');
-                            hexString.append(hex);
-                        }
-                        if (!hexString.toString().equals(receivedSignature)) {
-                            resp.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
-                            resp.getWriter().write("{\"success\":false,\"error\":\"Invalid webhook signature\"}");
-                            return;
-                        }
-                    } catch (Exception sigEx) {
-                        System.err.println("[PaymentWebhook] Signature verification failed: " + sigEx.getMessage());
-                    }
                 }
-                String status = reqJson.has("status") ? reqJson.get("status").getAsString() : "COMPLETED";
-                System.out.println("[PaymentWebhook] Webhook triggered for ZB-" + orderId + ", status: " + status + ", txn: " + transactionId);
-                
-                if ("COMPLETED".equalsIgnoreCase(status)) {
-                    PaymentService.getInstance().processOrderCapture(orderId, transactionId, paymentMethod);
-                } else {
-                    PaymentService.getInstance().processOrderCancellation(orderId, "Webhook status returned failure");
+                transactionId = razorpayPaymentId;
+                gatewayStatus = PaymentService.getInstance().verifyRazorpaySignatureAndFetchStatus(
+                        razorpayOrderId, razorpayPaymentId, razorpaySignature, orderId);
+            } else {
+                if (PaymentService.isPaymentTestMode() && (transactionId == null || transactionId.isBlank())) {
+                    transactionId = "mock_test_txn_" + orderId;
                 }
-                
-                resp.getWriter().write("{\"success\":true}");
+                gatewayStatus = PaymentService.getInstance().verifyPaymentOnGateway(transactionId, orderId);
             }
-            
+
+            if ("COMPLETED".equals(gatewayStatus)) {
+                boolean captured = PaymentService.getInstance().processOrderCapture(
+                        orderId, transactionId, context.paymentMethod);
+                if (captured) {
+                    resp.getWriter().write("{\"success\":true,\"status\":\"COMPLETED\"}");
+                } else {
+                    sendError(resp, HttpServletResponse.SC_CONFLICT, "Order could not be transitioned to paid");
+                }
+            } else if ("FAILED".equals(gatewayStatus)) {
+                PaymentService.getInstance().processOrderCancellation(
+                        orderId, "Payment provider returned a terminal failure");
+                sendError(resp, HttpServletResponse.SC_PAYMENT_REQUIRED, "Payment was declined");
+            } else {
+                resp.setStatus(HttpServletResponse.SC_ACCEPTED);
+                resp.getWriter().write("{\"success\":false,\"status\":\"PENDING\"}");
+            }
+        } catch (SecurityException e) {
+            System.err.println("[PaymentVerification] Rejected payment proof: " + e.getMessage());
+            sendError(resp, HttpServletResponse.SC_BAD_REQUEST, "Payment proof is invalid");
+        } catch (IllegalArgumentException e) {
+            sendError(resp, HttpServletResponse.SC_BAD_REQUEST, "Payment verification request is invalid");
         } catch (Exception e) {
-            e.printStackTrace();
-            resp.setStatus(HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
-            resp.getWriter().write("{\"success\":false,\"error\":\"An internal error occurred: " + e.getMessage() + "\"}");
+            System.err.println("[PaymentVerification] Verification failed: " + e.getMessage());
+            sendError(resp, HttpServletResponse.SC_BAD_GATEWAY, "Payment verification could not be completed");
+        }
+    }
+
+    private VerificationContext authorizeOrder(HttpServletRequest req, int orderId) {
+        HttpSession httpSession = req.getSession(false);
+        if (httpSession == null || !(httpSession.getAttribute("loggedInUser") instanceof User sessionUser)) {
+            return null;
+        }
+        try (Session dbSession = DBUtils.openSession()) {
+            User currentUser = dbSession.get(User.class, sessionUser.getUserID());
+            Orders order = dbSession.get(Orders.class, orderId);
+            if (currentUser == null || Boolean.TRUE.equals(currentUser.getBlocked()) || order == null) {
+                return null;
+            }
+            boolean ownsOrder = order.getUserId() == currentUser.getUserID();
+            boolean isSuperAdmin = "super_admin".equals(currentUser.getRole());
+            return ownsOrder || isSuperAdmin
+                    ? new VerificationContext(order.getPaymentMethod())
+                    : null;
+        }
+    }
+
+    private void handleWebhook(HttpServletRequest req, HttpServletResponse resp, String rawBody) throws Exception {
+        String secret = getConfig("RAZORPAY_WEBHOOK_SECRET");
+        if (secret == null || secret.isBlank()) {
+            sendError(resp, HttpServletResponse.SC_SERVICE_UNAVAILABLE, "Webhook verification is not configured");
+            return;
+        }
+        String receivedSignature = req.getHeader("X-Razorpay-Signature");
+        if (!PaymentService.isPaymentTestMode()) {
+            if (receivedSignature == null || !verifyWebhookSignature(rawBody, receivedSignature, secret)) {
+                sendError(resp, HttpServletResponse.SC_UNAUTHORIZED, "Invalid webhook signature");
+                return;
+            }
+        }
+
+        JsonObject root = JsonParser.parseString(rawBody).getAsJsonObject();
+        String event = root.has("event") ? root.get("event").getAsString() : "";
+        JsonObject paymentEntity = root.getAsJsonObject("payload")
+                .getAsJsonObject("payment")
+                .getAsJsonObject("entity");
+        String gatewayOrderId = paymentEntity.get("order_id").getAsString();
+        String gatewayPaymentId = paymentEntity.get("id").getAsString();
+        long gatewayAmount = paymentEntity.get("amount").getAsLong();
+
+        Payment storedPayment;
+        try (Session dbSession = DBUtils.openSession()) {
+            storedPayment = dbSession.createQuery(
+                    "from Payment where razorpayOrderId = :razorpayOrderId", Payment.class)
+                    .setParameter("razorpayOrderId", gatewayOrderId)
+                    .uniqueResult();
+        }
+        if (storedPayment == null || gatewayAmount != Math.round(storedPayment.getAmount() * 100)) {
+            sendError(resp, HttpServletResponse.SC_BAD_REQUEST, "Webhook payment does not match an order");
+            return;
+        }
+
+        if ("payment.captured".equals(event) || "payment.authorized".equals(event)) {
+            String status = PaymentService.getInstance().verifyPaymentOnGateway(
+                    gatewayPaymentId, storedPayment.getOrderId());
+            if (!"COMPLETED".equals(status) || !PaymentService.getInstance().processOrderCapture(
+                    storedPayment.getOrderId(), gatewayPaymentId, storedPayment.getPaymentMethod())) {
+                throw new IllegalStateException("Verified webhook payment could not be captured");
+            }
+        } else if ("payment.failed".equals(event)) {
+            PaymentService.getInstance().processOrderCancellation(
+                    storedPayment.getOrderId(), "Razorpay reported payment failure");
+        }
+        resp.getWriter().write("{\"success\":true}");
+    }
+
+    private boolean verifyWebhookSignature(String body, String receivedSignature, String secret) throws Exception {
+        Mac hmac = Mac.getInstance("HmacSHA256");
+        hmac.init(new SecretKeySpec(secret.getBytes(StandardCharsets.UTF_8), "HmacSHA256"));
+        byte[] digest = hmac.doFinal(body.getBytes(StandardCharsets.UTF_8));
+        StringBuilder expected = new StringBuilder(digest.length * 2);
+        for (byte value : digest) expected.append(String.format("%02x", value));
+        return MessageDigest.isEqual(
+                expected.toString().getBytes(StandardCharsets.US_ASCII),
+                receivedSignature.trim().getBytes(StandardCharsets.US_ASCII));
+    }
+
+    private String getConfig(String name) {
+        String value = System.getenv(name);
+        return value == null || value.isBlank() ? System.getProperty(name) : value;
+    }
+
+    private void sendError(HttpServletResponse resp, int status, String message) throws IOException {
+        resp.setStatus(status);
+        JsonObject error = new JsonObject();
+        error.addProperty("success", false);
+        error.addProperty("error", message);
+        resp.getWriter().write(error.toString());
+    }
+
+    private static final class VerificationContext {
+        private final String paymentMethod;
+
+        private VerificationContext(String paymentMethod) {
+            this.paymentMethod = paymentMethod;
         }
     }
 }
